--- a/index.html
+++ b/index.html
@@ -1,114 +1,63 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Migrations Visu </title>
-    
-<script type="text/javascript">
- 
-</script>
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
 
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+</style>
 </head>
 <body>
-<style type="text/css">
 
-   #section-main {
-    height: auto;
-    background-size: 200%;
-    background: url(img/wee-migrants.jpg) repeat  center center;
-    margin-top: -20px
-   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(85%);
-}
-   #country_sel_div{
-    color: black;
-    border-radius: 5px;
-    border: 5px solid gray;
-    background: lightblue;
-    margin: 25px;
-    padding: 15px;
-    font-size: 1.3em;
-    float: left;
-    height: 20px;
-}
-body{
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Ernst Handel</td>
+    <td>Roland Mendel</td>
+    <td>Austria</td>
+  </tr>
+  <tr>
+    <td>Island Trading</td>
+    <td>Helen Bennett</td>
+    <td>UK</td>
+  </tr>
+  <tr>
+    <td>Laughing Bacchus Winecellars</td>
+    <td>Yoshi Tannamuri</td>
+    <td>Canada</td>
+  </tr>
+  <tr>
+    <td>Magazzini Alimentari Riuniti</td>
+    <td>Giovanni Rovelli</td>
+    <td>Italy</td>
+  </tr>
+</table>
 
-    margin-top: -20px;
-    margin-left:-10px;
-    margin-right:0px;
-    margin-bottom: : -20px;
-
-
-}
-
-#inorout{
-    color: black;
-    border-radius: 5px;
-    border: 5px solid gray;
-    background: lightblue;
-    margin-top: 25px;
-    margin-left: 20px;
-    padding: 15px;
-    font-size: 1.3em;
-    float: left;
-    width: auto;
-    height: 20px;}
-
-#down_arrow{
-
-  transform: rotate(90deg);
-
-}
-
-</style>
-
-
-
-
-
-<section id="first">
-    <main id=section-main>
-        <div id="country_sel_div">
-            <span id="explanation">Click on the map or pick a country here:</span>
-            <select id="country_select">
-            </select>
-        </div>
-
-        <div id="inorout" style="width: 110px;">
-             <span id="in" class="on">
-                 <img src="img/down_arrow.gif" id="down_arrow" alt="down" height="22" width="22">
-                 <a href="#" class="blackLink">Arrivals</a>
-             </span> 
-
-        </div>
-        <div id="inorout">
-
-             <span id="out">
-                 <img src="img/down_arrow.gif" alt="up" height="22" width="22">
-                 <a href="#" class="blackLink">Departures</a>
-              </span>
-        </div>
-        <div id="legend">
-            <h2 id="country_name"> </h2>
-            <h3 id="popsize"></h3>
-            <table id="countries" width="100%"></table>
-        </div>
-        <div id="country_name_popup">
-
-
-
-
-
-
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
-        <br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>hi
-    </main>
-</section>
 </body>
 </html>
